@@ -1,4 +1,4 @@
 #maven.buildNumber.plugin properties file
-#Fri Dec 21 12:11:55 CET 2012
+#Sat Dec 29 16:57:16 CET 2012
 buildNumber=4
-buildNumber0=1309
+buildNumber0=1327
